ecmascript/parser/tests/test262-error-references/fail/d04aecd166354406.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/d04aecd166354406.js:1:19
  |
1 | 'use strict'; ('\1')
  |                   ^^

